serde_with_macros/tests/compile-fail/skip-none-always.stderr
error: The attributes `serialize_always` and `serde(skip_serializing_if = "...")` cannot be used on the same field: `a`.
 --> $DIR/skip-none-always.rs:4:1
  |
4 | #[skip_serializing_none]
  | ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: The attributes `serialize_always` and `serde(skip_serializing_if = "...")` cannot be used on the same field.
  --> $DIR/skip-none-always.rs:12:1
   |
12 | #[skip_serializing_none]
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: `serialize_always` may only be used on fields of type `Option`.
  --> $DIR/skip-none-always.rs:20:1
   |
20 | #[skip_serializing_none]
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
